# backend/api/handlers_output_sorted_by_date.go
@@ -79,10 +79,10 @@ func (h *Handler) GetShelvesS(c *gin.Context) {
 // @Description Get all inventory items sorted by update date
 // @Tags items
 // @Produce  json
-// @Param start path string true "Start date in format 2006-01-02"
-// @Param end path string true "End date in format 2006-01-02"
+// @Param start query string true "Start date in format 2006-01-02"
+// @Param end query string true "End date in format 2006-01-02"
 // @Success 200 {array} api_objects.InventorySorted
-// @Router /inventory_sorted/{start}/{end} [get]
+// @Router /inventory_sorted [get]
 func (h *Handler) GetInventoryS(c *gin.Context) {
 	start, err := time.Parse("2006-01-02", c.Query("start"))
 	if err != nil {
